# jua_warnings_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  app.py  config.py  lambda.py  pyproject.toml  routes.toml
.github/workflows/: test_and_deploy.yaml
app/: main.py
app/api/: auth.py
app/api/routes/: documentation.py  forecast.py  schemas.py  utils.py  warnings.py
app/services/: authentication.py
app/services/data_zarr/: calculations.py  data_service.py  data_sources.py  params.py
app/services/warnings/: forcast_service.py  models.py  utils.py  warning.py  warnings_service.py
scripts/: format-ci.sh  format.sh
stack/: warning_api_stack.py
tests/: conftest.py
tests/app/api/: test_api.py
tests/app/services/: test_data_sources.py  test_data_zarr.py
